# rust_sudoku_rank

./: Cargo.toml  main.rs
rules/: Cargo.toml
rules/src/: lib.rs
sudoku-core/: Cargo.toml
sudoku-core/src/: lib.rs
sudoku-core/src/core_traits/: rules.rs
sudoku-core/src/core_types/: impls.rs  mod.rs  types.rs
sudoku-core/tests/: sudoku_test.rs
sudoku-macros/: Cargo.toml
sudoku-macros/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs
types/tests/: sudoku_test.rs
