[package]
name = "rust_sudoku_rank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["sudoku-core", "sudoku-macros"]

[[bin]]
name = "main"
path = "main.rs"

[dev-dependencies]

[dependencies]
# sudoku-core = { path = "sudoku-core" }
# sudoku-macros = { path = "sudoku-macros" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
